--- a/css/style.css
+++ b/css/style.css
@@ -424,6 +424,7 @@ header .intro-text {
   width: 64px;
   height: 64px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .testimonial-content {
   position: relative;
