--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,14 +203,6 @@ a:focus,
   outline: none;
   outline-offset: none;
 }
-@media screen and (max-width: 600px) {
-  a:active {
-    background-image: none;
-    outline: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-}
 /* Header Section */
 .intro {
   display: table;
@@ -297,6 +289,11 @@ header .intro-text {
   list-style: none;
   padding: 0;
 }
+#about-section {
+  display: flex;
+  margin-left: 100px;
+  margin-right: 100px;
+}
 #about .about-text li:before {
   content: "\f00c";
   font-family: "FontAwesome";
@@ -304,13 +301,6 @@ header .intro-text {
   font-size: 11px;
   font-weight: 300;
   padding-right: 8px;
-}
-#about img {
-  width: 520px;
-  margin-top: 10px;
-  background: #fff;
-  border-right: 0;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.06);
 }
 #about p {
   line-height: 24px;
