--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,11 +263,20 @@ header .intro-text {
 }
 /* About Section */
 #about {
-  padding: 100px 0;
+  margin: auto;
+  display: flex;
+  padding: 50px 0;
+}
+#about1 {
+  margin-left: 100px;
+}
+#about2 {
+  margin-top: 50px;
 }
 #about h3 {
   font-size: 22px;
   margin: 0 0 20px 0;
+  text-align: left;
 }
 #about h2 {
   position: relative;
@@ -288,11 +297,7 @@ header .intro-text {
   margin-left: 6px;
   list-style: none;
   padding: 0;
-}
-#about-section {
-  display: flex;
-  margin-left: 100px;
-  margin-right: 100px;
+  min-width: 700px;
 }
 #about .about-text li:before {
   content: "\f00c";
@@ -301,13 +306,6 @@ header .intro-text {
   font-size: 11px;
   font-weight: 300;
   padding-right: 8px;
-}
-#about img {
-  width: 520px;
-  margin-top: 10px;
-  background: #fff;
-  border-right: 0;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.06);
 }
 #about p {
   line-height: 24px;
