--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,6 +162,25 @@ hr {
 .section-title p {
   font-size: 18px;
 }
+.section-title-small {
+  margin-bottom: 30px;
+}
+.section-title-small h2 {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+}
+.section-title-small h2::after {
+  position: absolute;
+  content: "";
+  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  height: 4px;
+  width: 60px;
+  bottom: 0;
+  margin-left: -30px;
+  left: 50%;
+}
 .btn-custom {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
