--- a/public/css/style.css
+++ b/public/css/style.css
@@ -439,7 +439,7 @@ header .intro-text {
 }
 /* Testimonials Section */
 #testimonials {
-  padding: 100px 0;
+  padding-top: 100px;
   background: #f6f6f6;
 }
 #testimonials i {
