--- a/public/css/style.css
+++ b/public/css/style.css
@@ -388,6 +388,28 @@ header .intro-text {
 #services .service-desc {
   margin-bottom: 40px;
 }
+/* Pricing Section */
+#pricing {
+  padding: 100px 0;
+  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  color: #fff;
+}
+#pricing h2 {
+  color: #fff;
+}
+#pricing .section-title h2::after {
+  position: absolute;
+  content: "";
+  background: rgba(255, 255, 255, 0.3);
+  height: 4px;
+  width: 60px;
+  bottom: 0;
+  margin-left: -30px;
+  left: 50%;
+}
+#pricing p {
+  color: rgba(255, 255, 255, 0.75);
+}
 /* Portfolio Section */
 #portfolio {
   padding: 100px 0;
@@ -623,7 +645,7 @@ label {
 /* Footer Section*/
 #footer {
   background: #f6f6f6;
-  padding: 30px 0;
+  padding: 60px 0 30px 0;
 }
 #footer p {
   color: #888;
