CSS for features

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,7 +95,7 @@ hr {
   font-weight: 400;
   padding: 8px 2px;
   border-radius: 0;
-  margin: 9px 20px 0 20px;
+  margin: 9px 10px 0 10px;
 }
 #menu.navbar-default .navbar-nav > li > a:after {
   display: block;
@@ -259,8 +259,8 @@ a:focus,
   margin-bottom: 60px;
 }
 header .intro-text {
-  padding-top: 350px;
-  padding-bottom: 200px;
+  padding-top: 200px;
+  padding-bottom: 100px;
   text-align: center;
 }
 /* Features Section */
@@ -388,6 +388,28 @@ header .intro-text {
 #services .service-desc {
   margin-bottom: 40px;
 }
+/* Pricing Section */
+#pricing {
+  padding: 100px 0;
+  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  color: #fff;
+}
+#pricing h2 {
+  color: #fff;
+}
+#pricing .section-title h2::after {
+  position: absolute;
+  content: "";
+  background: rgba(255, 255, 255, 0.3);
+  height: 4px;
+  width: 60px;
+  bottom: 0;
+  margin-left: -30px;
+  left: 50%;
+}
+#pricing p {
+  color: rgba(255, 255, 255, 0.75);
+}
 /* Portfolio Section */
 #portfolio {
   padding: 100px 0;
@@ -439,8 +461,16 @@ header .intro-text {
 }
 /* Testimonials Section */
 #testimonials {
-  padding: 100px 0;
+  padding-top: 100px;
   background: #f6f6f6;
+}
+#testimonials-continued {
+  padding-top: 30px;
+  padding-bottom: 100px;
+  background: #f6f6f6;
+}
+#testimonials .section-title {
+  margin-bottom: 20px;
 }
 #testimonials i {
   color: #e6e6e6;
@@ -615,7 +645,7 @@ label {
 /* Footer Section*/
 #footer {
   background: #f6f6f6;
-  padding: 30px 0;
+  padding: 60px 0 30px 0;
 }
 #footer p {
   color: #888;
