--- a/public/css/style.css
+++ b/public/css/style.css
@@ -265,8 +265,13 @@ header .intro-text {
 }
 /* Features Section */
 #features {
-  padding: 100px 0;
+  padding-top: 100px;
+  padding-bottom: 50px;
   background: #f6f6f6;
+}
+#features-continued {
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 #features i.fa {
   font-size: 38px;
@@ -285,17 +290,19 @@ header .intro-text {
   margin: auto;
   display: flex;
   width: fit-content;
-  padding: 100px 0;
+  padding-top: 150px;
 }
 #about1 {
   margin-left: 50px;
   margin-right: 50px;
   max-width: 500px;
+  float: left;
 }
 #about2 {
   margin-left: 50px;
   margin-right: 50px;
   max-width: 500px;
+  float: right;
 }
 #about h3 {
   font-size: 22px;
@@ -390,7 +397,8 @@ header .intro-text {
 }
 /* Pricing Section */
 #pricing {
-  padding: 100px 0;
+  padding-top: 150px;
+  padding-bottom: 100px;
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
   color: #fff;
 }
@@ -461,11 +469,11 @@ header .intro-text {
 }
 /* Testimonials Section */
 #testimonials {
-  padding-top: 100px;
-  background: #f6f6f6;
+  padding-top: 150px;
+  padding-bottom: 100px;
 }
 #testimonials-continued {
-  padding-top: 30px;
+  padding-top: 100px;
   padding-bottom: 100px;
   background: #f6f6f6;
 }
@@ -510,7 +518,7 @@ header .intro-text {
 }
 /* Team Section */
 #team {
-  padding: 100px 0;
+  padding-top: 150px;
 }
 #team h4 {
   margin: 5px 0;
@@ -644,7 +652,6 @@ label {
 }
 /* Footer Section*/
 #footer {
-  background: #f6f6f6;
   padding: 60px 0 30px 0;
 }
 #footer p {
