--- a/css/style.css
+++ b/css/style.css
@@ -535,6 +535,13 @@ header .intro-text {
   padding: 10px 0 0 0;
   color: #888;
 }
+@media only screen and (max-width: 767px) {
+  #team .thumbnail {
+    background: transparent;
+    border: 0;
+    float: none !important;
+  }
+}
 /* Contact Section */
 #contact {
   padding: 100px 0 60px 0;
