--- a/css/style.css
+++ b/css/style.css
@@ -267,13 +267,57 @@ header .intro-text {
 #features {
   padding-top: 100px;
   padding-bottom: 50px;
-  background: #f6f6f6;
+  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  color: #fff;
+}
+#features p {
+  color: rgba(255, 255, 255, 0.75);
 }
 #features-continued {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+#features h3 {
+  font-weight: 500;
+  padding: 5px 0;
+  color: #fff;
+}
+#features h2 {
+  color: #fff;
+}
 #features i.fa {
+  font-size: 38px;
+  margin-bottom: 20px;
+  transition: all 0.5s;
+  color: #fff;
+  width: 100px;
+  height: 100px;
+  padding: 30px 0;
+  border-radius: 50%;
+  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+}
+#features .section-title h2::after {
+  position: absolute;
+  content: "";
+  background: rgba(255, 255, 255, 0.3);
+  height: 4px;
+  width: 60px;
+  bottom: 0;
+  margin-left: -30px;
+  left: 50%;
+}
+/* Benefits Section */
+#benefits {
+  padding-top: 100px;
+  padding-bottom: 50px;
+  background: #f6f6f6;
+}
+#benefits-continued {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+#benefits i.fa {
   font-size: 38px;
   margin-bottom: 20px;
   transition: all 0.5s;
